--- a/wiki/CompileAndRun.wiki
+++ b/wiki/CompileAndRun.wiki
@@ -26,6 +26,11 @@ COMPILE
 
 RUN
 
+Windows XP FIX, je moet directx10 renderer uitschakelen.
+Dit doe je door in de {{{bin\debug}}} en {{{bin\release}}} mappen in de project map
+de file plugins.cfg aan te passen. Zet een {{{#}}} voor de directx10 renderer.
+
+
   # Rechts klik op HovercraftUniverse project (eerste subitem in de boom links).
   # Kies properties uit de drop down menu, nu opent een nieuw venster.
   # Kies Debugging en vul Working directory in afhankelijk van de mode, deze lees je naast Configuration in de titelbar en is of Debug of Release.
