Edited wiki page through web user interface.

--- a/wiki/Exceptions.wiki
+++ b/wiki/Exceptions.wiki
@@ -14,6 +14,10 @@ Het gebruik van de 2 macro's is aangeraden wanneer de nieuwe exception geen extr
 
 De macro's gebruik je zowel onderaan in Exception.h als in Exception.cpp. De macro die je gebruikt in Exception.h zorgt namelijk voor de declaratie van de klasse. De andere macro zorgt voor de definities van de methodes en bevindt zich dus in Exception.cpp.
 
+== Exceptions throwen ==
+
+Indien je exception de constructor Exception(msg, filename, linenumber) of Exception(msg, nested, filename, linenumber) implementeert, kan je gebruik maken van de THROW en THROW_NESTED macro. Deze bepaalt vanzelf de bestandsnaam en lijnnummer zodat deze gebruikt kunnen worden bij het debuggen.
+
 == Lijst van exceptions ==
 
 Hier kunnen we de lijst van exceptions, met wat uitleg, bijhouden zodat we geen dubbele zouden aanmaken.
