--- a/wiki/AgendaVergaderingen.wiki
+++ b/wiki/AgendaVergaderingen.wiki
@@ -55,3 +55,9 @@ Zet hier je agendapunten voor volgende vergadering, met je naam vermeld. Op deze
     * INI in core engine.
     * Delete TiXml*
     * _Vrijdag vanaf 16u00 gaat de refactoring gebeuren tot alles in orde is._
+   * Taakverdeling:
+    * Dirk: scripting met echte entiteiten
+    * Olivier: helpen met server console en networking
+    * PJ + Tobias: physics gebruiken op entities
+    * Kristof: server console input en listentities voor staat entities; entity representations visualizeren; beginnen modelleren
+    * Nick: menu 
