--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -8,7 +8,7 @@ Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorin
 
 == Vooruitgang == 
 
-  * Exceptions: alle exceptions komen hierin
+  * _Exceptions: alle exceptions komen hierin_
   * CoreEngine: moet in apart project komen met generieke Application klasse die overgeerfd moet worden door bv HovercraftApplication in het Hovercraft Universe project.
   * BasicEntityEvent moet bij Entity komen.
   * ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game.
