Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -4,14 +4,14 @@
 
 == Uitleg ==
 
-Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorings die aan de gang zijn, staan in het _italic_, de refactorings die compleet EN gecommit zijn staan in *bold* vermeld. Als alles in bold staat, wordt deze wiki verwijdert.
+Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorings die aan de gang zijn, staan in het _italic_, de refactorings die compleet EN gecommit zijn staan in *bold* vermeld. Als alles in bold staat, wordt deze wiki verwijderd.
 
 == Vooruitgang == 
 
   * *Exceptions: alle exceptions komen hierin*
   * _CoreEngine: moet in apart project komen met generieke Application klasse die overgeerfd moet worden door bv HovercraftApplication in het Hovercraft Universe project._
   * BasicEntityEvent moet bij Entity komen.
-  * ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game.
+  * _ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game._
   * Bij aanmaken nieuwe entity, documenteren waar deze in de rest van de solution ook moet worden bijgevoegd voor visualizatie/networking/scripting/...
   * EntityRegister: Moet in HovercraftUniverse project komen bij networking (niet core-networking).
   * RaceCamera: generiek maken
