--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -13,7 +13,7 @@ Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorin
   * BasicEntityEvent moet bij Entity komen.
   * _ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game._
   * EntityRegister: Moet in HovercraftUniverse project komen bij networking (niet core-networking).
-  * RaceCamera: generiek maken
+  * _RaceCamera: generiek maken_
   * GameView: indirectie verwijderen
   * EntityManager & RepresentationManager: moet pointers deleten en alles kunnen clearen.
   * CoreNetwork->Chat: in networking project
