--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -9,11 +9,11 @@ Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorin
 == Vooruitgang == 
 
   * *Exceptions: alle exceptions komen hierin*
-  * _CoreEngine: moet in apart project komen met generieke Application klasse die overgeerfd moet worden door bv HovercraftApplication in het Hovercraft Universe project._
+  * *CoreEngine: moet in apart project komen met generieke Application klasse die overgeerfd moet worden door bv HovercraftApplication in het Hovercraft Universe project.*
   * BasicEntityEvent moet bij Entity komen.
   * _ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game._
   * EntityRegister: Moet in HovercraftUniverse project komen bij networking (niet core-networking).
-  * _RaceCamera: generiek maken_
+  * *RaceCamera: generiek maken*
   * GameView: indirectie verwijderen
   * EntityManager & RepresentationManager: moet pointers deleten en alles kunnen clearen.
   * CoreNetwork->Chat: in networking project
@@ -22,5 +22,5 @@ Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorin
   * CustomOgreMaxScene: in CoreEngine
   * GUI uit HU in GUI project
   * Havok (generic) in core engine en game specifieke functionaliteit in HU.
-  * _INI in core engine._
+  * *INI in core engine.*
   * *Delete TiXml*
