Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -20,7 +20,7 @@ Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorin
   * CoreNetwork->ClientCore/ServerCore: behouden en hernoemen naar HUClient en HUServer of dergelijke.
   * CoreNetwork->Server+ServerThread: in HU behouden.
   * CustomOgreMaxScene: in CoreEngine
-  * GUI uit HU in GUI project
+  * *GUI uit HU in GUI project*
   * Havok (generic) in core engine en game specifieke functionaliteit in HU.
   * *INI in core engine.*
   * *Delete TiXml*
