--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -9,18 +9,18 @@ Alle refactorings die nog niet gedaan zijn staan in normale tekst, de refactorin
 == Vooruitgang == 
 
   * *Exceptions: alle exceptions komen hierin*
-  * *CoreEngine: moet in apart project komen met generieke Application klasse die overgeerfd moet worden door bv HovercraftApplication in het Hovercraft Universe project.*
-  * *BasicEntityEvent moet bij Entity komen.*
-  * _ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game._
-  * *EntityRegister: Moet in HovercraftUniverse project komen bij networking (niet core-networking).*
-  * *RaceCamera: generiek maken*
-  * GameView: indirectie verwijderen
-  * EntityManager & RepresentationManager: moet pointers deleten en alles kunnen clearen.
-  * *CoreNetwork->Chat: in networking project*
-  * *CoreNetwork->ClientCore/ServerCore: behouden en hernoemen naar HUClient en HUServer of dergelijke.*
-  * *CoreNetwork->Server+ServerThread: in HU behouden.*
-  * CustomOgreMaxScene: in CoreEngine
+  * *!CoreEngine: moet in apart project komen met generieke Application klasse die overgeerfd moet worden door bv HovercraftApplication in het Hovercraft Universe project.*
+  * *!BasicEntityEvent moet bij Entity komen.*
+  * !ControllerActionType: refactor and make generic for all types of controls (FPS, race, ...) and must be inherited by HU specific class that contains race controls for our game._
+  * *!EntityRegister: Moet in HovercraftUniverse project komen bij networking (niet core-networking).*
+  * *!RaceCamera: generiek maken*
+  * !GameView: indirectie verwijderen
+  * !EntityManager & RepresentationManager: moet pointers deleten en alles kunnen clearen.
+  * *!CoreNetwork->Chat: in networking project*
+  * *!CoreNetwork->!ClientCore/!ServerCore: behouden en hernoemen naar HUClient en HUServer of dergelijke.*
+  * *!CoreNetwork->Server+!ServerThread: in HU behouden.*
+  * !CustomOgreMaxScene: in !CoreEngine
   * *GUI uit HU in GUI project*
   * Havok (generic) in core engine en game specifieke functionaliteit in HU.
   * *INI in core engine.*
-  * *Delete TiXml*
+  * *Delete !TiXml*
