Edited wiki page through web user interface.

--- a/wiki/AgendaVergaderingen.wiki
+++ b/wiki/AgendaVergaderingen.wiki
@@ -61,3 +61,7 @@ Zet hier je agendapunten voor volgende vergadering, met je naam vermeld. Op deze
     * PJ + Tobias: physics gebruiken op entities
     * Kristof: server console input en listentities voor staat entities; entity representations visualizeren; beginnen modelleren
     * Nick: menu 
+
+== Vergadering 24/03 ==
+ * Scripting
+  * AI Obstacle avoidance: hoe ga ik de dimensie van andere entiteiten na? Bv entiteiten met bounding box of radius, of algemeen: functie "bool probe(Vector3 position)" die direct aan Havok vraagt of er zich op dat punt een obstakel bevindt. (Dirk)
