--- a/wiki/Planning.wiki
+++ b/wiki/Planning.wiki
@@ -1,15 +1,14 @@
 #summary The planning for the project.
 
-= Finished =
+= Tasks =
 
-  * W1: Determination of subject + project title.
-  * W2: Design architecture game + dividing tasks and responsibilities
-  * W3: Initial set-up of core engine + core components (GUI, Sound, Networking, Scripting, ...)
-  * W4: Integration components in core engine
+  * WP 1 (Nick + Olivier): Ontwikkeling race state.
+    * WP 1.1: Hernoemen Player naar PlayerSettings
+    * WP 1.2: Ontwikkeling RaceState object dat gesynchronizeerd wordt over alle deelnemers binnen een lobby. 
+    * WP 1.3: Implementatie RacePlayer object met PlayerSettings (ontvangen door Lobby) en Positie. 
+    * WP 1.4: RaceState creeert voor alle deelnemers in de Lobby een RacePlayer object, wat wordt gesynchronizeerd over alle deelnemers. 
+    * WP 1.5: Visualizatie alle deelnemers in plaats van enkel diegene die controle heeft over de.
+    * WP 1.6: Implementatie staten binnen de race state (count down, racing, finished, ...). 
+    * WP 1.7: Events triggeren naar clients als gevolg van de staten (tonen nummers bij count down, tonen ranking bij finish, ...).
+ 
 
-= Upcoming planning =
-
-  * W5: Integration and development of physics + integration and implementation of entities using engine.
-  * W6: Integration and application of scripting + development initial content.
-
-TODO Kan iedereen hier zijn persoonlijke planning voor de komende weken opzetten voor zover je er al een idee van hebt? Het is nogal moeilijk om ver vooruit te kijken met dit project, ik weet het.
