--- a/wiki/Planning.wiki
+++ b/wiki/Planning.wiki
@@ -1,5 +1,9 @@
 #summary The planning for the project.
 
+= TODO Planning =
+
+Ik ga deze planning nog sterk uitbreiden en een gantt-chart maken ervoor zodat de deadlines en dependencies duidelijk worden. Verder ga ik initiele functies toevoegen waarop kan aangeduid worden waaraan gewerkt wordt en wat klaar is. Dit gaat steeds in de Gantt-chart geupdatete worden. Andere developers mogen de planning uitbreiden, maar let op dat de dependencies correct blijven.
+
 = Tasks =
 
   * WP 1 (Nick + Olivier): Ontwikkeling race state.
@@ -10,15 +14,48 @@
     * WP 1.5: Visualizatie alle deelnemers in plaats van enkel diegene die controle heeft over de.
     * WP 1.6: Implementatie staten binnen de race state (count down, racing, finished, ...). 
     * WP 1.7: Events triggeren naar clients als gevolg van de staten (tonen nummers bij count down, tonen ranking bij finish, ...).
+    * WP 1.8: Player specific events (voorbijsteken, bereiken finish, bereiken checkpoint, ...) triggeren en koppelen aan GamePlayer.
 
   * WP 2 (Tobias + PJ): Integratie physics voor alle types entiteiten.
     * WP 2.1: Implementatie generieke physics voor wereld (zwaartekracht, botsing, ...)
-    * WP 2.2: Implementatie physics voor custom entiteiten.
+    * WP 2.2: Implementatie physics voor custom entiteiten (depends on 4.).
      * WP 2.2.1: Implementatie physics boost a.d.h.v. strength/acceleratie.
      * WP 2.2.2: Implementatie physics jump a.d.h.v. up force.
+     * 
 
   * WP 3 (Tobias + Nick): Controls
     * WP 3.1: Implementatie interface om controls te mappen.
     * WP 3.2: Visualizatie control mapping + bieden mogelijkheden om controls aan te passen en op te slaan voor volgende keer.
 
+  * WP 4 (Kristof): Toevoegen eigenschappen aan entiteiten.
+    * WP 4.1: Geef weight/max speed/acceleration/steering parameters aan hovercraft.
+    * WP 4.2: Geef eigenschappen aan planeet (gravity, ...).
+
+  * WP 5 (Kristof + PJ): 3D art development
+    * WP 5.1: Design hovercrafts.
+     * WP 5.1.1: Design meerdere hovercrafts (modeling).
+     * WP 5.1.2: Mapping materials op hovercrafts.
+     * WP 5.1.3: Toekenning eigenschappen aan hovercrafts (depends on WP 4.1).
+    * WP 5.2: Design models.
+     * WP 5.2.1: Modeling models.
+     * WP 5.2.2: Materialen mappen op models.
+     * WP 5.2.3: Toekennen animaties aan models.
+     * WP 5.2.4: Koppelen animaties aan events (depends on WP 1.8).
+    * WP 5.3: Design single asteroids/planeten.
+     * WP 5.4.1: Modeling planets.
+     * WP 5.4.2: Materialen mappen op planets.
+     * WP 5.4.3: Planets compliant maken zodat ze ingelezen kunnen worden door engine.
+     * WP 5.4.4: Koppelen eigenschappen planeet aan mesh.
+    * WP 5.4: Design maps (depends on WP1, WP2).
+      * WP 5.4.1: Implementatie pauze functie die huidige positie in x, y, z weergeeft zodat plaatsing nieuwe planeten waarnaar gejumpt moet worden gemakkelijker kan.
+      * WP 5.4.2: Plaatsing planeten om een hele map te verkrijgen.
+      * WP 5.4.3: Toelaten dat race state map laadt.
+
+   * WP 6: Finalizing
+    * WP 6.1: Code review 
+    * WP 6.2: Gameplay testing
+    * WP 6.3: Verpakking + installer.
+    * WP 6.4: TODO
+
+  
  
